# mcpproxy

./: .gitignore  DESIGN.md  IMPLEMENTATION_NOTES.md  README.md  install.py  main.py  pyproject.toml  test_proxy.py
mcpproxy/: __init__.py  logging.py
mcpproxy/indexer/: facade.py
mcpproxy/indexer/embedders/: base.py  bm25.py  huggingface.py  openai.py
mcpproxy/models/: constants.py  schemas.py
mcpproxy/persistence/: bm25_store.py  db.py  facade.py  faiss_store.py
mcpproxy/server/: config.py  mcp_server.py  server_discovery_manager.py  tool_pool_manager.py
mcpproxy/server/config/: config.py  config_file_handler.py
mcpproxy/utils/: dependencies.py  name_sanitizer.py  tool_weight_calculator.py
mcpproxy/utils/name_sanitization/: name_sanitizer.py
mcpproxy/utils/output_processing/: output_truncator.py
mcpproxy/utils/tool_scoring/: tool_weight_calculator.py
smart_mcp_proxy/: __init__.py  __main__.py  logging.py
smart_mcp_proxy/indexer/: __init__.py  base.py  bm25.py  facade.py  huggingface.py  openai.py
smart_mcp_proxy/models/: __init__.py  schemas.py
smart_mcp_proxy/persistence/: __init__.py  db.py  facade.py  faiss_store.py
smart_mcp_proxy/server/: __init__.py  config.py  mcp_server.py
smart_mcp_proxy/utils/: __init__.py  dependencies.py  hashing.py
tests/: __init__.py  conftest.py
tests/fixtures/: data.py  schema_fixtures.py  temp_storage_fixtures.py
tests/integration/: test_duplicate_tool_handling.py  test_end_to_end_flow.py  test_full_flow.py  test_incremental_indexing_flow.py  test_large_scale_indexing.py  test_multi_server_search_isolation.py  test_persistence_layer_integration.py  test_retrieve_tools_pool_management.py  test_search_ranking_quality.py  test_tool_update_flow.py
tests/unit/: test_config.py  test_hashing.py  test_indexer.py  test_mcp_server.py  test_persistence.py  test_tool_pool_management.py
tests/utils/: sample_data_generators.py
