[project]
name = "smart-mcp-proxy"
version = "0.1.0"
description = "Smart MCP Proxy - A federating gateway for MCP servers with intelligent tool discovery"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "fastmcp @ git+https://github.com/jlowin/fastmcp.git@main",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "bm25s[full]>=0.2.13",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.metadata]
allow-direct-references = true
