[project]
name = "smart-mcp-proxy"
version = "0.1.0"
description = "Smart MCP Proxy - A federating gateway for MCP servers with intelligent tool discovery"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "fastmcp @ git+https://github.com/jlowin/fastmcp.git@main",
    "faiss-cpu>=1.11.0",
    "sentence-transformers>=4.1.0",
    "openai>=1.86.0",
    "scikit-learn>=1.7.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "numpy>=2.2.6",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "bm25s[full]>=0.2.13",
    "build>=1.2.2.post1",
]

[project.scripts]
smart-mcp-proxy = "main:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.metadata]
allow-direct-references = true
