[project]
name = "mcpproxy"
version = "0.1.0"
description = "MCP Proxy - A federating gateway for MCP servers with intelligent tool discovery"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "fastmcp>=2.8.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "numpy>=2.2.6",
    "bm25s[full]>=0.2.13",
]

[project.scripts]
mcpproxy = "smart_mcp_proxy.__main__:main"

[project.optional-dependencies]
bm25 = [
    "bm25s[full]>=0.2.13",
]
huggingface = [
    "sentence-transformers>=4.1.0",
    "faiss-cpu>=1.11.0",
    "bm25s[full]>=0.2.13",
]
openai = [
    "openai>=1.86.0",
    "faiss-cpu>=1.11.0",
    "bm25s[full]>=0.2.13",
]
all = [
    "sentence-transformers>=4.1.0",
    "openai>=1.86.0",
    "faiss-cpu>=1.11.0",
    "bm25s[full]>=0.2.13",
]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "build>=1.2.2.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["smart_mcp_proxy"]
